Style contact form and add function Fix contact form on mobile

--- a/src/Components/MainPage.css
+++ b/src/Components/MainPage.css
@@ -28,8 +28,4 @@
     transform: scaleX(1);
     transform-origin: bottom left;
 }
-@media only screen and (max-width: 600px){
-    .intro{
-        margin-top: 10%;
-    }
-}
+
